--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,16 @@
 layout: page
 title: Contact Me
 description: Have questions? I have answers.
-background: '/img/bg-contact.jpg'
+background: /img/bg-contact.jpg
 form: true
+published: true
 ---
-
+---
+layout: page
+title: Page Title
+description: This is the page description.
+background: '/img/bg-index.jpg'
+---
 <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
 <form name="sentMessage" id="contactForm" novalidate>
   <div class="control-group">
