--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 layout: page
 title: Contact Me
 description: Have questions? I have answers.
-background: /img/bg-index.jpg
+background: /img/contact-bg-7.jpg
 form: true
 published: true
 ---
