--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,12 @@ published: true
 ---
 
 <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
-<form name="sentMessage" id="contactForm" novalidate>
+<form name="sentMessage" id="contactForm" action="https://formspree.io/xvoaplyp"
+  method="POST" novalidate>
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
       <label>Name</label>
-      <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
+      <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name." name="_replyto">
       <p class="help-block text-danger"></p>
     </div>
   </div>
