--- a/contact.html
+++ b/contact.html
@@ -8,19 +8,25 @@ published: true
 ---
 
 <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
-<form name="sentMessage" id="contactForm" action="https://formspree.io/xvoaplyp"
-  method="POST" novalidate>
-  <div class="control-group">
+<!-- modify this form HTML and place wherever you want your form -->
+
+<form name="sentMessage" id="contactForm"
+  action="https://formspree.io/xvoaplyp"
+  method="POST"
+  novalidate
+>
+<div class="control-group">
     <div class="form-group floating-label-form-group controls">
-      <label>Name</label>
-      <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name." name="_replyto">
-      <p class="help-block text-danger"></p>
+  <label>Name</label>
+  <input type="text" name="_replyto" class="form-control" placeholder="Name" id="name" required data-
+   validation-required-message="Please enter your name.">
+   <p class="help-block text-danger"></p>
     </div>
   </div>
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
-      <label>Email Address</label>
-      <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
+  <label>Email Address</label>
+  <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
       <p class="help-block text-danger"></p>
     </div>
   </div>
@@ -32,15 +38,16 @@ published: true
     </div>
   </div>
   <div class="control-group">
-    <div class="form-group floating-label-form-group controls">
-      <label>Message</label>
-      <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
-      <p class="help-block text-danger"></p>
-    </div>
-  </div>
-  <br>
-  <div id="success"></div>
-  <div class="form-group">
-    <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
-  </div>
+     <div class="form-group floating-label-form-group controls">
+       <label>Message</label>
+       <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+       <p class="help-block text-danger"></p>
+     </div>
+   </div>
+   <br>
+   <div id="success"></div>
+   <div class="form-group">
+     <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
+   </div>
+  <!-- your other form fields go here -->
 </form>
