--- a/contact.html
+++ b/contact.html
@@ -13,19 +13,34 @@ published: true
 <!-- modify this form HTML and place wherever you want your form -->
 
 <form
+  id="contactForm" 
   action="https://formspree.io/xvoaplyp"
   method="POST"
+  novalidate
 >
+  <div class="control-group">
+    <div class="form-group floating-label-form-group controls">
   <label>
-    Your email:
-    <input type="text" name="_replyto">
+    Email Address
+    <input type="text" name="_replyto" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
   </label>
-  <label>
-    Your message:
-    <textarea name="message"></textarea>
-  </label>
+    <p class="help-block text-danger"></p>
+   </div>
+  </div>
+  <div class="control-group">
+    <div class="form-group floating-label-form-group controls">
+      <label>Message
+        <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+      </label>     
+      <p class="help-block text-danger"></p>
+    </div>
+  </div>
+  <br>
 
   <!-- your other form fields go here -->
 
-  <button type="submit">Send</button>
+  <div id="success"></div>
+  <div class="form-group">
+    <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
+  </div>
 </form>
