--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,6 @@ published: true
 
   <div id="success"></div>
   <div class="form-group">
-    <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
+    <button type="submit" class="btn btn-primary">Send</button>
   </div>
 </form>
