--- a/contact.html
+++ b/contact.html
@@ -20,18 +20,15 @@ published: true
 >
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
-  <label>
-    Email Address
-    <input type="text" name="_replyto" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
-  </label>
+  <label>Email Address</label>
+      <input type="text" name="_replyto" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
     <p class="help-block text-danger"></p>
    </div>
   </div>
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
-      <label>Message
-        <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
-      </label>     
+      <label>Message</label> 
+      <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>    
       <p class="help-block text-danger"></p>
     </div>
   </div>
