--- a/search.html
+++ b/search.html
@@ -3,6 +3,7 @@ layout: page
 background: /img/bg-index.jpg
 published: true
 description: Looking for something.Search Here.
+title: Search Engine
 ---
 <h3>Search</h3><p>
 <script async src="https://cse.google.com/cse.js?cx=016889824253277009067:hoja5f6mmhe"></script>
